[package]
name = "handler"
version = "0.1.0"
authors = ["Jesper Håkansson <jesper@jesperh.se>"]

[dependencies]
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
diesel = { version = "1.3.2", features = ["postgres"] }
serde_derive = "1.0.78"
serde = "1.0.78"
slog = "2.3.3"
slog-term = "2.4.0"
slog-async = "2.3.0"
